--- a/dbrjs10_barcodeScanner_test/scan-single-barcode.html
+++ b/dbrjs10_barcodeScanner_test/scan-single-barcode.html
@@ -17,7 +17,10 @@
       });
       (async () => {
         const result = await barcodeScanner.launch();
-        alert(result.barcodeResults[0].text);
+        console.log(result);
+        for (let item of result.barcodeResults) {
+            alert(item.text);;
+        };
       })();
     </script>
   </body>
