update source for test

--- a/dbrjs10_barcodeScanner_test/scan-multiple-barcodes.html
+++ b/dbrjs10_barcodeScanner_test/scan-multiple-barcodes.html
@@ -18,6 +18,12 @@
         showResultView: true,
       });
       (async () => {
+        const arrDataBases = await indexedDB.databases();
+        const copiedArr = Array.from(arrDataBases);
+          for (let i of copiedArr) {
+            indexedDB.deleteDatabase(i.name);
+          }
+        localStorage.clear();
         const result = await barcodeScanner.launch();
         console.log(result);
       })();
