--- a/dbrjs10_barcodeScanner_test/scan-multiple-barcodes.html
+++ b/dbrjs10_barcodeScanner_test/scan-multiple-barcodes.html
@@ -26,6 +26,9 @@
         localStorage.clear();
         const result = await barcodeScanner.launch();
         console.log(result);
+        for (let item of result.barcodeResults) {
+            alert(item.text);
+        };
       })();
     </script>
   </body>
