--- a/dbrjs10_barcodeScanner_test/scan-single-barcode.html
+++ b/dbrjs10_barcodeScanner_test/scan-single-barcode.html
@@ -25,7 +25,7 @@
         const result = await barcodeScanner.launch();
         console.log(result);
         for (let item of result.barcodeResults) {
-            alert(item.text);;
+            alert(item.text);
         };
       })();
     </script>
