--- a/dbrjs10_barcodeScanner_test/scan-single-barcode.html
+++ b/dbrjs10_barcodeScanner_test/scan-single-barcode.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./dist/dbr.bundle.js"></script>
-    <!-- <script src="https://npm.scannerproxy.com:802/cdn/@dynamsoft/dynamsoft-barcode-reader-bundle@10.5.1000-dev-20250409173553/dist/dbr.bundle.js"></script> -->
+    <!-- <script src="https://npm.scannerproxy.com:802/cdn/@dynamsoft/dynamsoft-barcode-reader-bundle@10.5.1000-dev-20250423091232/dist/dbr.bundle.js"></script> -->
   </head>
   <body>
     <script>
@@ -14,6 +14,7 @@
           showCloseButton: true,
         },
         showUploadImageButton: true,
+        //barcodeFormats: Dynamsoft.DBR.EnumBarcodeFormat.BF_QR_CODE
       });
       (async () => {
         const arrDataBases = await indexedDB.databases();
