--- a/dbrjs11_barcodeScanner_test/cart-builder.html
+++ b/dbrjs11_barcodeScanner_test/cart-builder.html
@@ -242,12 +242,14 @@
       document.addEventListener("mouseup", () => (isDragging = false));
 
       dragDiv.addEventListener("touchstart", (e) => {
+        e.preventDefault();
         isDragging = true;
         offsetX = e.touches[0].clientX - dragDiv.offsetLeft;
         offsetY = e.touches[0].clientY - dragDiv.offsetTop;
       });
 
       document.addEventListener("touchmove", (e) => {
+        e.preventDefault();
         if (isDragging) {
           dragDiv.style.left = `${e.touches[0].clientX - offsetX}px`;
           dragDiv.style.top = `${e.touches[0].clientY - offsetY}px`;
