--- a/dbrjs11_barcodeScanner_test/scan-single-barcode.html
+++ b/dbrjs11_barcodeScanner_test/scan-single-barcode.html
@@ -1,41 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./dist/dbr.bundle.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader-bundle@10.5.3000/dist/dbr.bundle.js"></script> -->
-    <!-- <script src="https://npm.scannerproxy.com:802/cdn/@dynamsoft/dynamsoft-barcode-reader-bundle@11.0.3000-dev-20250626162739/dist/dbr.bundle.js"></script> -->
-  </head>
-  <body>
-    <script>
-      const barcodeScanner = new Dynamsoft.BarcodeScanner({
-        license: "YOUR_LICENSE_KEY_HERE",
-        // utilizedTemplateNames:{
-        //     single: `ReadSingleBarcode`,
-        //     multi_unique: `ReadBarcodes_SpeedFirst`,
-        //     image: `ReadBarcodes_ReadRateFirst`,
-        // }
-        // engineResourcePaths: {rootDirectory:"./dist"},
-        // scannerViewConfig: {
-        //   showCloseButton: true,
-        // },
-        // showUploadImageButton: true,
-        // barcodeFormats: [Dynamsoft.DBR.EnumBarcodeFormat.BF_QR_CODE , Dynamsoft.DBR.EnumBarcodeFormat.BF_CODE_128],
-      });
-      (async () => {
-        const arrDataBases = await indexedDB.databases();
-        const copiedArr = Array.from(arrDataBases);
-          for (let i of copiedArr) {
-            indexedDB.deleteDatabase(i.name);
-          }
-        localStorage.clear();
-        const result = await barcodeScanner.launch();
-        console.log(result);
-        for (let item of result.barcodeResults) {
-            alert(item.text);
-        };
-      })();
-    </script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>
+    Dynamsoft Barcode Scanner Sample - Hello World (Decode via Camera)
+  </title>
+
+  <!-- Include Dynamsoft Barcode Reader Bundle via CDN -->
+  <!--   <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader-bundle@11.0.3000/dist/dbr.bundle.js"></script> -->
+  <!-- If the network is unstable or you prefer to self-host the SDK, uncomment the line below to load it locally -->
+  <script src="./dist/dbr.bundle.js"></script>
+
+
+  <style>
+    /* Reset default margin and padding, and apply border-box sizing */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    /* Ensure html and body take full viewport size */
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+    }
+
+    /* Style for the scanner title */
+    .barcode-scanner-title {
+      height: 80px;
+      text-align: center;
+      font-size: 20px;
+      padding: 20px 0;
+    }
+
+    /* Container where the barcode scanner will be rendered */
+    .barcode-scanner-view {
+      width: 100%;
+      height: calc(100% - 80px);
+      /* Fill remaining space below the title */
+    }
+  </style>
+</head>
+
+<body>
+  <h1 class="barcode-scanner-title">
+    Hello World (Scan One Single Barcode via Camera)
+  </h1>
+  <!-- This div will host the barcode scanner's camera view -->
+  <div class="barcode-scanner-view"></div>
+
+  <script>
+    // Configuration object for initializing the BarcodeScanner instance. Refer to https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/barcode-scanner.html#barcodescannerconfig
+    let config = {
+      license: "DLS2eyJvcmdhbml6YXRpb25JRCI6IjIwMDAwMSJ9", // Replace with your Dynamsoft license key
+      container: document.querySelector(".barcode-scanner-view"), // Specify where to render the scanner UI
+
+      // showUploadImageButton: true,
+      // showPoweredByDynamsoft: false,
+      // scannerViewConfig: {
+      //   showFlashButton: true,
+      //   cameraSwitchControl: "toggleFrontBack",
+      // },
+    };
+
+    // Create a new instance of the Dynamsoft Barcode Scanner
+    const barcodeScanner = new Dynamsoft.BarcodeScanner(config);
+
+    // Launch the scanner and handle the scanned result
+    barcodeScanner.launch().then((result) => {
+      // Display the first detected barcode's text in an alert
+      if (result.barcodeResults.length) {
+        alert(result.barcodeResults[0].text);
+      }
+    });
+  </script>
+</body>
+
 </html>
