--- a/dbrjs11_barcodeScanner_test/cart-builder.html
+++ b/dbrjs11_barcodeScanner_test/cart-builder.html
@@ -7,9 +7,9 @@
   <title>List-Builder - Scan to Cart Simulation</title>
 
   <!-- Dynamsoft Barcode Reader Bundle -->
-  <script src="./dist/dbr.bundle.js"></script>
+  <!--   <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader-bundle@11.0.3000/dist/dbr.bundle.js"></script> -->
   <!-- If the network is unstable or you prefer to self-host the SDK, uncomment the line below to load it locally -->
-  <!-- <script src="../../../distributables/dbr.bundle.js"></script> -->
+  <script src="./dist/dbr.bundle.js"></script>
 
 
   <style>
@@ -72,8 +72,10 @@
       position: fixed;
       top: 400px;
       left: 100px;
-      width: 400px;
-      height: 200px;
+      width: 50%;
+      height: 25%;
+      max-width: 400px;
+      max-height: 200px;
       background: #f9f9f9;
       border: 2px solid #ccc;
       border-radius: 8px;
