--- a/dbrjs11_barcodeScanner_test/cart-builder.html
+++ b/dbrjs11_barcodeScanner_test/cart-builder.html
@@ -9,7 +9,7 @@
   <!-- Dynamsoft Barcode Reader Bundle -->
   <!--   <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader-bundle@11.0.3000/dist/dbr.bundle.js"></script> -->
   <!-- If the network is unstable or you prefer to self-host the SDK, uncomment the line below to load it locally -->
-  <script src="./dist/dbr.bundle.js"></script>
+  <!-- <script src="./dist/dbr.bundle.js"></script> -->
 
 
   <style>
@@ -70,12 +70,14 @@
 
     #floatingDiv {
       position: fixed;
-      top: 400px;
-      left: 100px;
+      top: 40%;
+      left: 10%;
       width: 50%;
       height: 25%;
       max-width: 400px;
       max-height: 200px;
+      min-width: 150px;
+      min-height: 150px;
       background: #f9f9f9;
       border: 2px solid #ccc;
       border-radius: 8px;
