--- a/dbrjs11_barcodeScanner_test/scan-single-barcode.html
+++ b/dbrjs11_barcodeScanner_test/scan-single-barcode.html
@@ -54,6 +54,12 @@
   <div class="barcode-scanner-view"></div>
 
   <script>
+    const arrDataBases = await indexedDB.databases();
+    const copiedArr = Array.from(arrDataBases);
+      for (let i of copiedArr) {
+        indexedDB.deleteDatabase(i.name);
+      }
+    localStorage.clear();
     // Configuration object for initializing the BarcodeScanner instance. Refer to https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/barcode-scanner.html#barcodescannerconfig
     let config = {
       license: "DLS2eyJvcmdhbml6YXRpb25JRCI6IjIwMDAwMSJ9", // Replace with your Dynamsoft license key
