--- a/dbrjs11_barcodeScanner_test/scan-multiple-barcodes.html
+++ b/dbrjs11_barcodeScanner_test/scan-multiple-barcodes.html
@@ -53,12 +53,14 @@
   <div class="barcode-scanner-view"></div>
 
   <script>
-    const arrDataBases = await indexedDB.databases();
-    const copiedArr = Array.from(arrDataBases);
-      for (let i of copiedArr) {
-        indexedDB.deleteDatabase(i.name);
-      }
-    localStorage.clear();
+      (async () => {
+        const arrDataBases = await indexedDB.databases();
+        const copiedArr = Array.from(arrDataBases);
+          for (let i of copiedArr) {
+            indexedDB.deleteDatabase(i.name);
+          }
+        localStorage.clear();
+      })();
     // Configuration object for initializing the BarcodeScanner instance. Refer to https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/barcode-scanner.html#barcodescannerconfig
     let config = {
       // Replace with your Dynamsoft license key
