--- a/dbrjs11_barcodeScanner_test/scan-multiple-barcodes.html
+++ b/dbrjs11_barcodeScanner_test/scan-multiple-barcodes.html
@@ -13,7 +13,7 @@
       // Dynamsoft.Core.CoreModule._usePThread = true;
       
       const barcodeScanner = new Dynamsoft.BarcodeScanner({
-        license: "YOUR_LICENSE_KEY_HERE",
+        license: "DLS2eyJoYW5kc2hha2VDb2RlIjoiMjAwMDAwLTEwMzk4OTAwMyIsIm1haW5TZXJ2ZXJVUkwiOiJodHRwczovL21sdHMuZHluYW1zb2Z0LmNvbS8iLCJvcmdhbml6YXRpb25JRCI6IjIwMDAwMCIsInN0YW5kYnlTZXJ2ZXJVUkwiOiJodHRwczovL3NsdHMuZHluYW1zb2Z0LmNvbS8iLCJjaGVja0NvZGUiOjk0NTQ3NzkxMX0=",
         templateFilePath: './speedml.json',
         utilizedTemplateNames:{
             single: `speed`,
