--- a/dbrjs11_barcodeScanner_test/scan-multiple-barcodes.html
+++ b/dbrjs11_barcodeScanner_test/scan-multiple-barcodes.html
@@ -29,12 +29,12 @@
         // barcodeFormats: [Dynamsoft.DBR.EnumBarcodeFormat.BF_QR_CODE , Dynamsoft.DBR.EnumBarcodeFormat.BF_CODE_128],
       });
       (async () => {
-        const arrDataBases = await indexedDB.databases();
-        const copiedArr = Array.from(arrDataBases);
-          for (let i of copiedArr) {
-            indexedDB.deleteDatabase(i.name);
-          }
-        localStorage.clear();
+        // const arrDataBases = await indexedDB.databases();
+        // const copiedArr = Array.from(arrDataBases);
+        //   for (let i of copiedArr) {
+        //     indexedDB.deleteDatabase(i.name);
+        //   }
+        // localStorage.clear();
         const result = await barcodeScanner.launch();
         console.log(result);
         // for (let item of result.barcodeResults) {
