--- a/dbrjs11_barcodeScanner_test/scan-multiple-barcodes-ml-nos.html
+++ b/dbrjs11_barcodeScanner_test/scan-multiple-barcodes-ml-nos.html
@@ -16,9 +16,9 @@
         license: "DLS2eyJoYW5kc2hha2VDb2RlIjoiMjAwMDAwLTEwMzk4OTAwMyIsIm1haW5TZXJ2ZXJVUkwiOiJodHRwczovL21sdHMuZHluYW1zb2Z0LmNvbS8iLCJvcmdhbml6YXRpb25JRCI6IjIwMDAwMCIsInN0YW5kYnlTZXJ2ZXJVUkwiOiJodHRwczovL3NsdHMuZHluYW1zb2Z0LmNvbS8iLCJjaGVja0NvZGUiOjk0NTQ3NzkxMX0=",
         templateFilePath: './speedml.json',
         utilizedTemplateNames:{
-            single: `speed-ml`,
-            multi_unique: `speed-ml`,
-            image: `speed-ml`,
+            single: `speed-ml-nos`,
+            multi_unique: `speed-ml-nos`,
+            image: `speed-ml-nos`,
         },
         scanMode: Dynamsoft.EnumScanMode.SM_MULTI_UNIQUE
         // engineResourcePaths: {rootDirectory:"./dist"},
