--- a/dbrjs11_barcodeScanner_test/scan-multiple-barcodes-ml-nos.html
+++ b/dbrjs11_barcodeScanner_test/scan-multiple-barcodes-ml-nos.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./dist/dbr.bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/eruda/eruda.min.js"></script>
+    <script>eruda.init();</script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader-bundle@11.0.6000/dist/dbr.bundle.js"></script> -->
     <!-- <script src="https://npm.scannerproxy.com:802/cdn/@dynamsoft/dynamsoft-barcode-reader-bundle@11.2.1000-dev-20250923135008/dist/dbr.bundle.js"></script> -->
   </head>
