--- a/dbrjs11_barcodeScanner_test/scan-multiple-barcodes.html
+++ b/dbrjs11_barcodeScanner_test/scan-multiple-barcodes.html
@@ -10,6 +10,7 @@
     <!-- <script src="https://npm.scannerproxy.com:802/cdn/@dynamsoft/dynamsoft-barcode-reader-bundle@11.2.1000-dev-20250923135008/dist/dbr.bundle.js"></script> -->
   </head>
   <body>
+    <h1>Template A v11.2.1000-Alpha Baseline "speed" template</h1>
     <script>
       // Dynamsoft.Core.CoreModule._useMLBackend = true;
       // Dynamsoft.Core.CoreModule._usePThread = true;
