--- a/dbrjs11_barcodeScanner_test/scan-multiple-barcodes-ml-nos.html
+++ b/dbrjs11_barcodeScanner_test/scan-multiple-barcodes-ml-nos.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <title>Template B v11.2.1000-Alpha Candidate new "speed" template(ML)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./dist/dbr.bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/eruda/eruda.min.js"></script>
