--- a/dbrjs11_barcodeScanner_test/scan-multiple-barcodes-ml.html
+++ b/dbrjs11_barcodeScanner_test/scan-multiple-barcodes-ml.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Template C v11.2.1000-Alpha Candidate new "speed" template(ML-Decoder)</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./dist/dbr.bundle.js"></script>
