--- a/dbrjs11_barcodeScanner_test/scan-multiple-barcodes.html
+++ b/dbrjs11_barcodeScanner_test/scan-multiple-barcodes.html
@@ -16,6 +16,10 @@
       // Dynamsoft.Core.CoreModule._useMLBackend = true;
       // Dynamsoft.Core.CoreModule._usePThread = true;
       
+      let cvRouter = null;
+      let cameraEnhancer = null;
+      let cameraView = null;
+
       const barcodeScanner = new Dynamsoft.BarcodeScanner({
         license: "DLS2eyJoYW5kc2hha2VDb2RlIjoiMjAwMDAwLTEwMzk4OTAwMyIsIm1haW5TZXJ2ZXJVUkwiOiJodHRwczovL21sdHMuZHluYW1zb2Z0LmNvbS8iLCJvcmdhbml6YXRpb25JRCI6IjIwMDAwMCIsInN0YW5kYnlTZXJ2ZXJVUkwiOiJodHRwczovL3NsdHMuZHluYW1zb2Z0LmNvbS8iLCJjaGVja0NvZGUiOjk0NTQ3NzkxMX0=",
         templateFilePath: './speedml.json',
@@ -24,7 +28,12 @@
             multi_unique: `speed`,
             image: `speed`,
         },
-        scanMode: Dynamsoft.EnumScanMode.SM_MULTI_UNIQUE
+        scanMode: Dynamsoft.EnumScanMode.SM_MULTI_UNIQUE,
+        onInitReady: (components) => {
+            cvRouter = components.cvRouter;
+            cameraEnhancer = components.cameraEnhancer;
+            cameraView = components.cameraView
+        }
         // engineResourcePaths: {rootDirectory:"./dist"},
         // scannerViewConfig: {
         //   showCloseButton: true,
