--- a/dbrjs11_barcodeScanner_test/scan-multiple-barcodes-ml.html
+++ b/dbrjs11_barcodeScanner_test/scan-multiple-barcodes-ml.html
@@ -15,7 +15,7 @@
     <script>
       // Dynamsoft.Core.CoreModule._useMLBackend = true;
       // Dynamsoft.Core.CoreModule._usePThread = true;
-      
+
       let cvRouter = null;
       let cameraEnhancer = null;
       let cameraView = null;
@@ -32,7 +32,9 @@
         onInitReady: (components) => {
             cvRouter = components.cvRouter;
             cameraEnhancer = components.cameraEnhancer;
-            cameraView = components.cameraView
+            cameraView = components.cameraView;
+            // turn off webgl fetching
+            cameraEnhancer._imageDataGetter.useWebGLByDefault = false;
         }
         // engineResourcePaths: {rootDirectory:"./dist"},
         // scannerViewConfig: {
